2010-09-26  Robert Millan  <rmh@gnu.org>

	Build fixes for GNU/kFreeBSD.

	* Makefile.util.def: Add `$(LIBZFS) $(LIBNVPAIR)' library dependencies
	to programs that require ZFS conversion.
	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_is_floppy): Support
	kernels that don't have FLOPPY_MAJOR.

2010-09-25  BVK Chaitanya  <bvk.groups@gmail.com>

	* grub-core/kern/emu/full.c (grub_emu_post_init):  Fix typo.

2010-09-25  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix grub-emu build.

	* grub-core/kern/emu/main.c: Remove #include <getopt.h>.
	* grub-core/kern/emu/full.c: Split grub_mdraid_{init,fini} into
	mdraid09 and mdraid1x.

2010-09-24  Colin Watson  <cjwatson@ubuntu.com>

	Re-enable grub-extras.

	* autogen.sh: Create symlinks to ${GRUB_CONTRIB} if necessary to
	avoid confusing Automake.  Run autogen only twice, once for the top
	level and once for grub-core.  Add Makefile.util.def and
	Makefile.core.def from extra modules to the appropriate autogen
	invocations.  If Makefile.common exists in an extra module, include
	it in both Makefile.util.am and grub-core/Makefile.core.am;
	similarly, include any Makefile.util.common file in Makefile.util.am
	and any Makefile.core.common file in grub-core/Makefile.core.am.
	* conf/Makefile.common ($(top_srcdir)/grub-core/Makefile.core.am):
	Depend on $(top_srcdir)/grub-core/Makefile.gcry.def.
	($(top_srcdir)/grub-core/Makefile.gcry.def): Remove.
	* grub-core/Makefile.am: Remove inclusion of Makefile.gcry.am.

	* gentpl.py (gvar_add): Turn GVARS into a set.
	(global_variable_initializers): Sort global variables on output.
	(vars_init): New function.
	(first_time): Likewise.
	(library): Ensure that non-global variable initialisations are
	emitted before the first time we emit code for a library block.
	Append to variables rather than setting them.  Only emit
	noinst_LIBRARIES, BUILT_SOURCES, and CLEANFILES the first time for
	each conditional path.
	(program): installdir() emits an Autogen macro, so must be passed to